--- a/AgendaFX2/src/sample/FXML_Pages/CalculatorPage.fxml
+++ b/AgendaFX2/src/sample/FXML_Pages/CalculatorPage.fxml
@@ -3,12 +3,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="rootPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.FXML_Pages.CalculatorPage">
+<AnchorPane fx:id="rootPane" prefHeight="403.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.FXML_Pages.CalculatorPage">
    <children>
-      <TextField fx:id="nr1" alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="283.0" promptText="Nr 1" />
-      <TextField fx:id="nr2" alignment="CENTER" layoutX="303.0" layoutY="14.0" prefHeight="25.0" prefWidth="283.0" promptText="Nr 2" />
+      <HBox layoutX="13.0" layoutY="14.0" spacing="10.0">
+         <children>
+            <TextField fx:id="nr1" alignment="CENTER" prefHeight="25.0" prefWidth="283.0" promptText="Nr 1" />
+            <TextField fx:id="nr2" alignment="CENTER" prefHeight="25.0" prefWidth="283.0" promptText="Nr 2" />
+         </children>
+      </HBox>
       <TextField fx:id="rezultat" alignment="CENTER" editable="false" layoutX="159.0" layoutY="77.0" prefHeight="25.0" prefWidth="283.0" promptText="Rezultat" />
       <VBox alignment="CENTER" layoutX="237.0" layoutY="142.0" spacing="10.0">
          <children>
