--- a/AgendaFX2/src/sample/FXML_Pages/Main.fxml
+++ b/AgendaFX2/src/sample/FXML_Pages/Main.fxml
@@ -13,6 +13,8 @@
             <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#GoToListaContacte" onMouseEntered="#ListContagtGif" onMouseExited="#EmptyGif" text="Lista Contacte" textAlignment="CENTER" />
             <Button layoutX="10.0" layoutY="45.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#GoToCalculator" onMouseEntered="#CalculatortGif" onMouseExited="#EmptyGif" text="Calculator" textAlignment="CENTER" />
             <Button layoutX="10.0" layoutY="80.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#GoToNotes" onMouseEntered="#CarnetGif" onMouseExited="#EmptyGif" text="Carnet" textAlignment="CENTER" />
+            <Button layoutX="10.0" layoutY="257.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#GoToAlarms" onMouseEntered="#AlarmGif" onMouseExited="#EmptyGif" text="Alarma" textAlignment="CENTER" />
+            <Button layoutX="10.0" layoutY="274.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#GoToEvenimente" onMouseEntered="#EvenimenteGif" onMouseExited="#EmptyGif" text="Evenimente" textAlignment="CENTER" />
          </children>
       </VBox>
       <ImageView fx:id="gifView" fitHeight="256.0" fitWidth="256.0" layoutX="294.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true" />
