--- a/AgendaFX2/src/sample/FXML_Pages/AlarmsPage.fxml
+++ b/AgendaFX2/src/sample/FXML_Pages/AlarmsPage.fxml
@@ -5,17 +5,17 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="403.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.FXML_Pages.AlarmsPage">
+<AnchorPane fx:id="rootPane" prefHeight="403.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.FXML_Pages.AlarmsPage">
    <children>
-      <TableView prefHeight="374.0" prefWidth="600.0">
+      <TableView fx:id="tabelAlarme" prefHeight="374.0" prefWidth="600.0">
         <columns>
           <TableColumn prefWidth="217.0" text="Nume Alarma" />
-            <TableColumn minWidth="0.0" prefWidth="208.0" text="Repetare zile" />
+            <TableColumn minWidth="0.0" prefWidth="208.0" text="Repetare Zile" />
             <TableColumn minWidth="0.0" prefWidth="174.0" text="Ora" />
         </columns>
       </TableView>
-      <Button layoutX="14.0" layoutY="377.0" mnemonicParsing="false" text="Inapoi" />
+      <Button layoutX="14.0" layoutY="377.0" mnemonicParsing="false" onAction="#GoBackToMain" text="Inapoi" />
       <Button layoutX="252.0" layoutY="377.0" mnemonicParsing="false" text="Adauga alarma" />
-      <Button layoutX="496.0" layoutY="377.0" mnemonicParsing="false" text="Sterge alarma" />
+      <Button layoutX="496.0" layoutY="377.0" mnemonicParsing="false" onAction="#StergeAlarma" text="Sterge alarma" />
    </children>
 </AnchorPane>
