--- a/AgendaFX2/src/sample/FXML_Pages/EvenimentsPage.fxml
+++ b/AgendaFX2/src/sample/FXML_Pages/EvenimentsPage.fxml
@@ -14,7 +14,7 @@
             <TableColumn fx:id="tcOra" editable="false" prefWidth="124.0" text="Ora" />
         </columns>
       </TableView>
-      <Button layoutX="14.0" layoutY="374.0" mnemonicParsing="false" onAction="#GoBack" prefHeight="0.0" prefWidth="50.0" text="Inapoi" />
+      <Button layoutX="14.0" layoutY="374.0" mnemonicParsing="false" onAction="#GoBackToMain" prefHeight="0.0" prefWidth="50.0" text="Inapoi" />
       <Button layoutX="242.0" layoutY="374.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#GoToAddEveniment" text="Adauga eveniment" />
       <Button layoutX="477.0" layoutY="374.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#StergeEveniment" text="Sterge eveniment" />
    </children>
